The Python Imaging Library: The aggdraw Module

*** Changes from release 1.2 to 1.3 ***

- Python 3 support added
- Use freetype-config to find root freetype directory
- REVIVE THE PROJECT!

*** Changes from release 1.1 to 1.2 ***

(1.2a3 released)

- Fixed crash when using type() or help() on aggdraw objects.

- Fixed crash in Path() constructor.

- Fixed some build issues under recent GCC versions.  The compiler
  still issues more warnings than it should; I'll have to fix that
  in a future release.

(1.2a2 released)

- Changed 'expose' method to require keyword arguments.  You can
  use 'hwnd' to pass in a window handle, or 'hdc' to pass in a
  device context:

	dib.expose(hwnd=window)
	dib.expose(hdc=dc)

- Added 'clear' method.  By default, it fills the entire image to
  the original background color.  If you pass in a color name, it
  uses the given color instead.

(1.2a1 released)

- Added experimental 'Dib' support (based on code from the Python
  Imaging Library).  The 'Dib' factory is similar to 'Draw', but
  allows the drawing context to be copied to the display.

	dib = Dib("RGB", size, background)
	
	... draw ...

	dib.expose(hwnd=wnd)

- Fixed a couple of gcc compiler nits.

*** Changes from release 1.0 to 1.1 ***

(1.1 released)

- Fixed rendering of symbols containing nested polygons (broken in
  1.1b3).

- Added 'coords' method to the Path type.  This returns the current
  path as a polyline.  If the path consists of multiple path fragments,
  the return value is undefined. (experimental)

(1.1b3 released)

- The Windows installer now uses Freetype 2.1.10.  This seems to fix
  the issue with irregular baselines reported for some fonts.

- Performance: changes to how and when drawing adapters are created,
  and proper clipping in the rasterizer can result in massive speedups
  for some applications.

- Added experimental 'setantialias' method to the drawing context.
  Pass in 0 to disable antialiasing, 1 to enable it.  Antialiasing