@@ -1,5 +1,10 @@
 The Python Imaging Library: The aggdraw Module
 
+*** Changes from release 1.3 to 1.3.1 ***
+
+- Fix Python 2 compatibility when getting RGB from string colors [#21]
+- Re-add ability to get colors from PIL [#21]
+
 *** Changes from release 1.2 to 1.3 ***
 
 - Python 3 support added
